// DBML for Portfolio Database Schema

Table users {
  id integer [pk, increment, note: 'Unique identifier for the user']
  username varchar(50) [unique, not null, note: 'Login username']
  password varchar(255) [not null, note: 'Bcrypt hashed password']
  fullname varchar(150) [not null, note: 'User\'s full name']
  role varchar(20) [not null, default: 'user', note: 'User role (e.g., admin, user)']
  updated_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
}

Table projects {
  id integer [pk, increment]
  title varchar(200) [not null]
  description text
  repo_url varchar(500)
  live_url varchar(500)
  project_img_url varchar(500)
  status varchar(20) [not null, default: 'in-progress', note: 'Project status (in-progress, completed, archived)']
  sort_order integer [not null, default: 0]
  featured boolean [not null, default: false]
  is_deleted boolean [not null, default: false]
  updated_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
}

Table techstack {
  id integer [pk, increment]
  name varchar(100) [unique, not null]
  category varchar(50) [not null, note: 'Category (language, framework, database, devops)']
  logo_url varchar(255)
  sort_order integer [not null, default: 0]
  updated_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
}

Table project_techstacks {
  id integer [pk, increment]
  project_id integer [not null]
  techstack_id integer [not null]
}

Ref: project_techstacks.project_id > projects.id [delete: cascade]
Ref: project_techstacks.techstack_id > techstack.id [delete: cascade]
